set up questions and users crud lists pages

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,3 +1,10 @@
-admin.html.erb
+<a href="/manage/admins/user_crud">Manage users</a>|
+<a href="/manage/admins/question_crud">Manage Questions</a>
 
+
+<div class="log" style="float:right">
+  <a href="/users/sign_out">Log off</a>
+
+</div>
+<br>
 <%= yield %>
