set up backedn CRUD for users and questions

--- a/app/views/manage/admins/question_crud.html.erb
+++ b/app/views/manage/admins/question_crud.html.erb
@@ -6,7 +6,9 @@ questions_crud.html.erb
 
 <% @questions.each do |u| %>
 <li>
-<%= u.question %>
+  <a href="/manage/questions/<%= u.id %>">
+    <%= u.question %>
+  </a>
 </li>
 
 <% end %>
