--- a/app/views/manage/admins/user_crud.html.erb
+++ b/app/views/manage/admins/user_crud.html.erb
@@ -7,7 +7,9 @@ user_crud.html.erb
 
 <% @users.each do |u| %>
 <li>
-<%= u.name %>
+  <a href="/manage/users/<%= u.id %>">
+    <%= u.name %>
+  </a>
 </li>
 
 <% end %>
