--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+
+<% @categories.each do |individual_category|%>
+	<%= link_to "#{individual_category.name}", category_path(individual_category) %><br>
+<%end%>
+
+
