--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,4 +3,4 @@
 	<%= link_to "#{individual_category.name}", category_path(individual_category) %><br>
 <%end%>
 
-
+<%= link_to "Submit a Question for Review", new_question_path%>
