finished new view, next will be create

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,41 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+<h2>Question Submission:</h2>
+<div class="question-form-instructions">
+	Use this page to submit a great question for any of our categories that will be used by other quiz takers. Here are the things we like to keep in mind when designing new questions:
+	<ul>
+		<li>MOST IMPORTANT - Create a question based on the book version of the story not a movie / TV show version </li>
+		<li>The easiest way to come up with something is read a random chapter from your favorite category and notice interesting themes or events that play into the grand scheme of the story</li>
+		<li>We find one of the best source of question quality comes from great incorrect answers, try looking for details that are easy to confuse or two character theme that are easy to mix up</li>
+		<li>Try to avoid questions about details on fine details about very minor plot points</li>
+		<li>The best questions are the ones where the quiz taker feels like they SHOULD know the answer </li>
+		<li>Make sure you include your citation page number so we can quickly reference and get started on approving your question for our pool</li>	
+	</ul>
+	Have fun and we can't wait to see your great questions. We review every question and will reach out to you about feedback to see how we might be able to improve your question or let you know it was spot on originally.
+</div>
+<br>
+<div class="question-form">
+	<%= form_for([@question]) do |f|%>
+
+	<%= f.label :categories, "Category", class: "question-form-title"%>
+	<%= select("category", "category_id", Category.all.collect {|c| [ c.name, c.id ] }, { include_blank: false })%><br>
+
+	<%= f.label :question, "Question", class: "question-form-title"%>
+	<%= f.text_field :question, class: "question-form-control"%><br>
+
+	<%= f.label :real_answer, "Answer", class: "question-form-title"%>
+	<%= f.text_field :real_answer, class: "question-form-control" %><br>
+
+	<%= f.label :dummy_answer1, "First Dummy Answer", class: "question-form-title"%> 
+	<%= f.text_field :dummy_answer1, class: "question-description"%><br>
+
+	<%= f.label :dummy_answer2, "Second Dummy Answer", class: "question-form-title"%> 
+	<%= f.text_field :dummy_answer2, class: "question-description"%><br>
+
+	<%= f.label :dummy_answer3, "Third Dummy Answer", class: "question-form-title"%> 
+	<%= f.text_field :dummy_answer3, class: "question-description"%><br>
+
+	<%= f.label :citation, "Citation", class: "question-form-title"%> 
+	<%= f.text_field :citation, :placeholder => "(book, page number) eg (Half Blooded Prince, pg.596)", class: "question-description"%>
+
+	<%= f.submit "Create question", class: "btn btn-primary"%>
+	<% end %>
+</div>
