config initial omni-auth settings

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,7 @@
 
 
 <div class="log" style="float:right">
-  <a href="/users/sign_out">Log off</a>
+  <a class="log-out-link" href="/users/sign_out">Log off</a>
 
 </div>
 <br>
