--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,7 @@
-
-<% @categories.each do |individual_category|%>
+<div class="category-container">
+	<% @categories.each do |individual_category|%>
 	<%= link_to "#{individual_category.name}", category_path(individual_category) %><br>
-<%end%>
+	<%end%>
 
-<%= link_to "Submit a Question for Review", new_question_path%>
+	<%= link_to "Submit a Question for Review", new_question_path%>
+</div>
