add the admin control if statement

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,10 +1,7 @@
 <a href="/manage/admins/user_crud">Manage users</a>|
 <a href="/manage/admins/question_crud">Manage Questions</a>
 
-
-<div class="log" style="float:right">
-  <a class="log-out-link" href="/users/sign_out">Log off</a>
-
-</div>
-<br>
+  <div style="float:right">
+    <a href="/user_log_out_route/sign_out">Log out</a>
+  </div><br>
 <%= yield %>
