--- a/app/views/manage/admins/dashboard.html.erb
+++ b/app/views/manage/admins/dashboard.html.erb
@@ -1,2 +1,16 @@
 dashboard.html.erb
+<h2>Create a new category</h2>
+<form action="/categories" method="POST">
+  <label for="name">Category name</label>
+  <input type="text" name="name">
+  <br>
+  <label for="image_url">Image </label>
+  <input type="text" name="image_url">
+  <br>
+  <input type="submit" value="Submit">
+</form>
 
+<h3>Current categories</h3>
+<% Category.all.each do |c| %>
+<%= c.name %>
+<% end %>
