--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.log-in {
+  background-color: #DDE4CF;
+  padding: 21px;
+  position: relative;
+  width: 20%;
+  left: 38%;
+}
+
+.navbar {
+  padding: 2%;
+}
+
+.signed_out {
+  margin: 0 auto;
+  position: relative;
+  margin-left: 43%;
+
+}
