--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,16 @@
 show.html.erb
+
+<br>
+switch user account
+
+<br>
+basic user info
+
+<br>
+quizzes taken
+
+<br>
+analytics
+
+<br>
+your questions
