--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,6 @@
 
+<h2>Current categories</h2>
+
 <% @categories.each do |individual_category|%>
 	<%= link_to "#{individual_category.name}", category_path(individual_category) %><br>
 <%end%>
