build out pages for categories and approval disapproval

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -21,3 +21,11 @@
   margin-left: 43%;
 
 }
+
+.approved-question {
+  background-color: #BDF5BD;
+}
+
+.non-approved-question {
+  background-color: #FF6161;
+}
