--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -8,7 +8,7 @@
 		<li>We find one of the best source of question quality comes from great incorrect answers, try looking for details that are easy to confuse or two character theme that are easy to mix up</li>
 		<li>Try to avoid questions about details on fine details about very minor plot points</li>
 		<li>The best questions are the ones where the quiz taker feels like they SHOULD know the answer </li>
-		<li>Make sure you include your citation page number so we can quickly reference and get started on approving your question for our pool</li>	
+		<li>Make sure you include your citation page number so we can quickly reference and get started on approving your question for our pool.  If the answer is obvious then you don't have to be too specific on your citation, just name the book the information is in, or a web link for confirmation.  Please provide citation at your own discretion.</li>
 	</ul>
 	Have fun and we can't wait to see your great questions. We review every question and will reach out to you about feedback to see how we might be able to improve your question or let you know it was spot on originally.
 </div>
@@ -25,16 +25,16 @@
 	<%= f.label :real_answer, "Answer", class: "question-form-title"%>
 	<%= f.text_field :real_answer, class: "question-form-control form-control" %><br>
 
-	<%= f.label :dummy_answer1, "First Dummy Answer", class: "question-form-title"%> 
+	<%= f.label :dummy_answer1, "First Dummy Answer", class: "question-form-title"%>
 	<%= f.text_field :dummy_answer1, class: "question-form-control form-control"%><br>
 
-	<%= f.label :dummy_answer2, "Second Dummy Answer", class: "question-form-title"%> 
+	<%= f.label :dummy_answer2, "Second Dummy Answer", class: "question-form-title"%>
 	<%= f.text_field :dummy_answer2, class: "question-form-control form-control"%><br>
 
-	<%= f.label :dummy_answer3, "Third Dummy Answer", class: "question-form-title"%> 
+	<%= f.label :dummy_answer3, "Third Dummy Answer", class: "question-form-title"%>
 	<%= f.text_field :dummy_answer3, class: "question-form-control form-control"%><br>
 
-	<%= f.label :citation, "Citation", class: "question-form-title"%> 
+	<%= f.label :citation, "Citation", class: "question-form-title"%>
 	<%= f.text_field :citation, :placeholder => "(book, page number) eg (Half Blooded Prince, pg.596)", class: "question-form-control form-control"%>
 
 	<%= f.submit "Submit Question", class: "new-question-button btn btn-primary"%>
