--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,12 +11,12 @@ h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
-  text-align: center;
+  text-align: left;
 }
 
 .question-form-instructions{
   width:50%;
-  margin-left:25%;
+  margin-left:5%;
 }
 .question-form-instructions ul{
 	list-style: none;
@@ -29,7 +29,7 @@ h1 {
 .question-form{
   width: 40%;
   display: block;
-  margin-left: 30%;
+  margin-left: 5%;
   margin-top: 1%;
 }
 
