--- a/app/assets/stylesheets/manage/questions.scss
+++ b/app/assets/stylesheets/manage/questions.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the manage/questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.ans {
+  padding: 4px;
+  margin: 3px;
+}
+
+.real-answer {
+  background-color: yellow;
+}
+
+.dummy-answer {
+  background-color: pink;
+}
