--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Categories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.question-box {
+    margin: 2px;
+    background-color: #DBE7E8;
+    padding: 2%;
+    width: 50%;
+    border-radius: 10px;
+    }
