--- a/app/views/manage/questions/show.html.erb
+++ b/app/views/manage/questions/show.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="approve-controls">
-  <a href="#" class="appr">approve?</a> | <a href="#" class="disp">disapprove?</a>
+  <a href="#" class="appr">approve?</a> | <a href="#" class="disp">disapprove?</a>| <a href="/manage/questions/<%= @question.id %>/trash">trash this question</a>
 </div>
 
 <div class="dis-reason" style="display:none">
