--- a/app/assets/stylesheets/manage/admins.scss
+++ b/app/assets/stylesheets/manage/admins.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the manage/admins controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.question {
+  float: left;
+}
+
+
+.status {
+  float: right;
+}
+
+.ro {
+  display: inline;
+}
+
+li {
+  list-style: none;
+}
+
+.row {
+  position: relative;
+  width: 70%;
+}
+
+.small-avatar {
+  width:40px;
+  border-radius: 100px;
+  border-color: white;
+  border-width: 2px;
+  border-style: solid;
+}
+
+.medium-avatar {
+  width:60px;
+  border-radius: 100px;
+  border-color: white;
+  border-width: 2px;
+  border-style: solid;
+  float: right;
+}
