--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
 <%=@category.name%>
 
 <div class="quiz-box">
-    <form id="quiz-form" action="">
+    <form id="quiz-form" action="/categories/<%= @category.id %>/tabulate_scores">
       <input type="hidden" name="question_list" value="<%= @qlist %>">
       <input type="hidden" name="cat_id" value="<%= @category.id %>">
       <% @ques.each_with_index do |q, idx| %>
@@ -13,7 +13,7 @@
           <hr>
           <% pool = [{show:q.real_answer, val:'right'}, {show:q.dummy_answer1, val:'wrong'}, {show:q.dummy_answer2, val:'wrong'}, {show:q.dummy_answer3, val:'wrong'}].shuffle! %>
             <% pool.each do |p|%>
-              <input type="radio" id="qtn<%= idx %>" name="ans<%= idx %>" value=<%= p[:val] %>><%= p[:show] %> <br>
+              <input type="radio" id="qtn<%= idx %>" name="score[ans<%= idx %>]" value=<%= p[:val] %>><%= p[:show] %> <br>
             <% end %>
 
         </div>
@@ -28,13 +28,13 @@
     questions.push('qtn'+i);
   }
 
-  $("body").on('click', '.submit-button', function(event) {
+  $("body").on('click', '#submit-button', function(event) {
     event.preventDefault();
     var completed = true;
     var message = []
     for(var i in questions){
       if($("#qtn"+i).val() == null){
-        completed = false;
+        // completed = false;
         message.push(i+1);
       }
     }
@@ -43,7 +43,7 @@
       $("#quiz-form").trigger('submit');
     }
     else{
-      alert('quiz incomplete')
+      alert('quiz incomplete:' + message.join(','))
     }
   });
 
