--- a/app/assets/stylesheets/manage/admins.scss
+++ b/app/assets/stylesheets/manage/admins.scss
@@ -4,11 +4,12 @@
 
 
 .status {
-  float: right;
+  /*float: right;*/
 }
 
 .ro {
   display: inline;
+  width: 50%;
 }
 
 li {
@@ -18,6 +19,8 @@ li {
 .row {
   position: relative;
   width: 100%;
+  overflow: auto;
+  padding: 2%;
 }
 
 .small-avatar {
