--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
 .log-in {
   background-color: #DDE4CF;
   padding: 21px;
@@ -27,5 +22,5 @@
 }
 
 .non-approved-question {
-  background-color: #FF6161;
+  background-color: #F5CDCD;
 }
