--- a/app/assets/stylesheets/manage/admins.scss
+++ b/app/assets/stylesheets/manage/admins.scss
@@ -32,7 +32,8 @@ li {
 }
 
 .medium-avatar {
-  width:60px;
+  /*width:60px;*/
+  width:80px;
   border-radius: 100px;
   border-color: white;
   border-width: 2px;
