--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -34,6 +34,20 @@
       <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
     <% end %>
   </ul>
+  <div class="hero-animation">
+    <ul class="bg-bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
 </header>
 
 <% if current_user %>
