--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -156,5 +156,66 @@ header {
         }
       }
     }
+
+    .hero-text {
+      position: absolute;
+      color: white;
+      font-style: italic;
+      width: 50%;
+      text-align: center;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+main {
+  text-align: center;
+  margin: 100px 0;
+
+  .about-title {
+    margin: 20px 0 70px;
+    color: $blue;
+  }
+
+  .about-app {
+    li {
+      display: inline-block;
+      margin: 0 70px;
+
+      figure {
+        max-width: 230px;
+
+        figcaption {
+          padding: 20px 0;
+        }
+      }
+
+      .about-image {
+        width: 170px;
+        height: 170px;
+        border-radius: 50%;
+        margin: 0 auto;
+      }
+
+      &.create-questions {
+        .about-image {
+          background: $dark-blue;
+        }
+      }
+
+      &.take-quizes {
+        .about-image {
+          background: $yellow;
+        }
+      }
+
+      &.share-scores {
+        .about-image {
+          background: $dark-green;
+        }
+      }
+    }
   }
 }
