--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,4 +1,8 @@
 $blue: #0195C7;
+$dark-blue: #277894;
 $light-grey: #E6E6E6;
 $pink: #F47A6B;
 $coral: #E24C39;
+$dark-green: #015C5C;
+$yellow: #FCD671;
+$purple: #091575;
