--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -47,8 +47,35 @@
       <li></li>
       <li></li>
     </ul>
+    <h2 class="hero-text">This site is for sharing great trivia questions about our favorite popular narratives.</h2>
   </div>
 </header>
+<main>
+  <h2 class="about-title">What's Great About This App</h2>
+  <ul class="about-app">
+    <li class="create-questions">
+      <figure>
+        <!-- this should be img tag later -->
+        <div class="about-image"></div>
+        <figcaption>Create great questions to challenge other users</figcaption>
+      </figure>
+    </li>
+    <li class="take-quizes">
+      <figure>
+        <!-- this should be img tag later -->
+        <div class="about-image"></div>
+        <figcaption>Take quizzes based on questions created by other users</figcaption>
+      </figure>
+    </li>
+    <li class="share-scores">
+      <figure>
+        <!-- this should be img tag later -->
+        <div class="about-image"></div>
+        <figcaption>Share your scores and see how your friends do on their own quizzes</figcaption>
+      </figure>
+    </li>
+  </ul>
+</main>
 
 <% if current_user %>
  <% if current_user.admin? %>
