--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -35,7 +35,7 @@
 	<%= f.text_field :dummy_answer3, class: "question-form-control form-control"%><br>
 
 	<%= f.label :citation, "Citation", class: "question-form-title"%>
-	<%= f.text_field :citation, :placeholder => "(book, page number) eg (Half Blooded Prince, pg.596)", class: "question-form-control form-control"%>
+	<%= f.text_field :citation, :placeholder => "(book, page number) eg (Half Blood Prince, pg.596)", class: "question-form-control form-control"%>
 
 	<%= f.submit "Submit Question", class: "new-question-button btn btn-primary"%>
 	<% end %>
