--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -8,86 +8,66 @@
   <%= csrf_meta_tags %>
 </head>
 
-
-<% if user_signed_in? %>
-  <div class="navbar">
-    <ul>
-
+<header>
+  <div class="main-logo">
+    <span>Diamond <img src="<%= asset_path( 'diamond-icon.png' ) %>" /> Quizo</span>
+  </div>
+  <ul class="navigation">
+    <% if user_signed_in? %>
       <li>
-      <a href="/user_info/<%= current_user.id %>/show_info">
-        <img src="<%= current_user.avatar_url %>" alt="">
-        <%= current_user.name %>
-      </a>
-      |
+        <a href="/user_info/<%= current_user.id %>/show_info">
+          <img src="<%= current_user.avatar_url %>" alt="">
+          <%= current_user.name %>
+        </a>
       </li>
-      <li>
-      <a href="/questions/new">
-        Submit Trivia
-      </a>
-      |
-      </li>
-      <li>
-      <a href="/categories">
-       Browse Quizes
-      </a>
-      |
-      </li>
-      <li>
-      <a href="/">
-        Home
-      </a>
-      |
-      </li>
-
+      <li><a href="/questions/new">Submit Trivia</a></li>
+      <li><a href="/categories">Browse Quizes</a></li>
+      <li><a href="/">Home</a></li>
       <li>
         <div style="float:right">
           <a href="/user_log_out_route/sign_out">Log out</a>
         </div>
       </li>
-    </ul>
-  </div>
-
-<% else %>
-<div class="navbar signed_out">
-
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-</div>
-<% end %>
+    <% else %>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Questions</a></li>
+      <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+    <% end %>
+  </ul>
+</header>
 
 <% if current_user %>
  <% if current_user.admin? %>
-    <div class="admin-box">
+  <div class="admin-box">
+    <li>
+      <a href="#" class="drop-admin-box">Admin controls</a>
+    </li>
+    <ul class="admin-links" style="display:none;">
       <li>
-        <a href="#" class="drop-admin-box">Admin controls</a>
-      </li>
-      <ul class="admin-links" style="display:none;">
-        <li>
-          <a href="/manage/questions">question pool</a>
-        |</li>
-        <li>
-          <a href="/manage/admins/question_crud">
-            pending questions
-          </a>
-        |</li>
-        <li>
-          <a href="/manage/admins/user_crud">
-            users control
-          </a>
-        |</li>
-        <li>
-          <a href="/manage/admins/dashboard">admin dashboard</a>
-        |</li>
-        <div style="float:right">
-          <a href="#" class="close-admin-box">
-            [x]
-          </a>
-        </div>
-      </ul>
-    </div>
-    <% end %>
+        <a href="/manage/questions">question pool</a>
+      |</li>
+      <li>
+        <a href="/manage/admins/question_crud">
+          pending questions
+        </a>
+      |</li>
+      <li>
+        <a href="/manage/admins/user_crud">
+          users control
+        </a>
+      |</li>
+      <li>
+        <a href="/manage/admins/dashboard">admin dashboard</a>
+      |</li>
+      <div style="float:right">
+        <a href="#" class="close-admin-box">
+          [x]
+        </a>
+      </div>
+    </ul>
+  </div>
   <% end %>
-<hr>
-
+<% end %>
 
 <body>
   <div class="body-div">
