add footer to the page, change about us section to flex, so it's more responsive

--- a/app/views/users/front_page.html.erb
+++ b/app/views/users/front_page.html.erb
@@ -97,6 +97,9 @@
   </div>
   <% end %>
 <% end %>
+<footer>
+  &copy; Diamond Quizo team, 2016
+</footer>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
