--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins/flex';
 
 header {
   border-bottom: 1px solid $light-grey;
@@ -187,10 +188,13 @@ main {
   }
 
   .about-app {
-    li {
-      display: inline-block;
-      margin: 0 70px;
+    @include display(flex);
+    @include justify-content(space-around);
+    @include align-items(center);
+    @include flex-flow(row wrap);
+    padding: 0;
 
+    li {
       figure {
         max-width: 230px;
 
@@ -225,4 +229,10 @@ main {
       }
     }
   }
+}
+footer {
+  text-align: center;
+  border-top: 1px solid $light-grey;
+  padding: 20px;
+  color: $blue;
 }
